tempfile/async-recursion/tests/ui/not_async.stderr
error: expected an async function
 --> tests/ui/not_async.rs:3:1
  |
3 | #[async_recursion]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `async_recursion` (in Nightly builds, run with -Z macro-backtrace for more info)
