tempfile/async-recursion/tests/ui/not_async.rs
use async_recursion::async_recursion;

#[async_recursion]
fn not_async() {}

fn main() {}